# gh-actions-tester

./: meson.build
.github/workflows/: download.yml  main.yaml  release.yml
subprojects/criterion/: README.md  meson.build
test/: meson.build
test/scripts/: meson_xml_to_junit.py
test/src/: example_test.c
